--- a/src/features/wordbank/Wordbank.module.css
+++ b/src/features/wordbank/Wordbank.module.css
@@ -14,10 +14,19 @@
 }
 
 .list {
-  text-align: left;
-  width: 30%;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  width: 50%;
   margin: 0 auto;
   padding: 1rem;
+  flex-wrap: wrap;
+}
+
+.word {
+  margin: 0.5rem;
+  width: 45%;
+  justify-content: space-evenly;
 }
 
 .button {
