Added styling fixes, progress indicator

--- a/src/features/wordbank/Wordbank.module.css
+++ b/src/features/wordbank/Wordbank.module.css
@@ -15,8 +15,12 @@
 
 .translationOptions p {
   margin: 0;
+  font-size: 1rem !important;
 }
 
+.progress {
+  margin: 0;
+}
 
 .list {
   display: flex;
