--- a/src/features/navigation/Navigation.module.css
+++ b/src/features/navigation/Navigation.module.css
@@ -15,14 +15,14 @@
   margin: 0;
   padding: 1rem 2.5rem;
   font-size: 2rem;
-  color: white;
-  background-color: black;
+  color: black;
+  font-weight: bold;
 }
-
 
 .options button, .translation button {
   height: 100%;
   width: 10vw;
+  min-width: 10vw;
   font-size: 1rem;
   background-color: red;
   border: none;
